--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -20,7 +20,7 @@ framework:
     form: ~
     csrf_protection: ~
     validation: { enable_annotations: true }
-    #serializer: { enable_annotations: true }
+    serializer: { enable_annotations: true }
     default_locale: '%locale%'
     trusted_hosts: ~
     session:
@@ -67,3 +67,22 @@ swiftmailer:
     username: '%mailer_user%'
     password: '%mailer_password%'
     spool: { type: memory }
+
+fos_rest:
+    routing_loader:
+        default_format: json
+#        include_format: true
+        include_format: false
+    param_fetcher_listener: force
+    body_listener: true
+    allowed_methods_listener: true
+    view:
+        view_response_listener: 'force'
+        formats:
+            json: true
+            xml: true
+    format_listener:
+        rules:
+            - { path: '^/messenger', priorities: ['json'], fallback_format: json, prefer_extension: true }
+            - { path: ^/, priorities: ['html', '*/*'], fallback_format: html, prefer_extension: true }
+#    disable_csrf_role: ROLE_API
