--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -13,6 +13,8 @@ parameters:
 framework:
     #esi: ~
     #translator: { fallbacks: ['%locale%'] }
+    templating:
+        engines: ['twig']
     secret: '%secret%'
     router:
         resource: '%kernel.project_dir%/app/config/routing.yml'
@@ -86,3 +88,23 @@ fos_rest:
             - { path: '^/messenger', priorities: ['json'], fallback_format: json, prefer_extension: true }
             - { path: ^/, priorities: ['html', '*/*'], fallback_format: html, prefer_extension: true }
 #    disable_csrf_role: ROLE_API
+
+nelmio_api_doc:
+    areas:
+        path_patterns: # an array of regexps
+            - ^/messenger(?!/doc$)
+    documentation:
+        schemes: [http]
+        info:
+            title: 'Messenger Rest App'
+            description: 'Test task specially for <a href="https://gen.tech/">Genesis</a>'
+            version: 1.0.0
+        securityDefinitions:
+            Bearer:
+                type: apiKey
+                bearerFormat: 'JWT'
+                description: 'Value: Bearer {jwt}'
+                name: Authorization
+                in: header
+        security:
+            - Bearer: []
