--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -10,3 +10,8 @@ app:
 messenger:
     resource: "@MessengerBundle/Resources/config/routing.yml"
     prefix:   /messenger
+
+app.swagger_ui:
+    path: /api/doc/messenger
+    methods: GET
+    defaults: { _controller: nelmio_api_doc.controller.swagger_ui }
