--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -22,7 +22,7 @@ framework:
     form: ~
     csrf_protection: ~
     validation: { enable_annotations: true }
-    serializer: { enable_annotations: true }
+#    serializer: { enable_annotations: true }
     default_locale: '%locale%'
     trusted_hosts: ~
     session:
@@ -88,6 +88,8 @@ fos_rest:
             - { path: '^/api/messenger', priorities: ['json'], fallback_format: json, prefer_extension: true }
             - { path: ^/, priorities: ['html', '*/*'], fallback_format: html, prefer_extension: true }
 #    disable_csrf_role: ROLE_API
+    serializer:
+        groups:               ['Default']
 
 nelmio_api_doc:
     areas:
