--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "doctrine/orm": "^2.5",
         "friendsofsymfony/rest-bundle": "^2.3",
         "incenteev/composer-parameter-handler": "^2.0",
+        "jms/serializer": "^1.12",
         "jms/serializer-bundle": "^2.4",
         "nelmio/api-doc-bundle": "^3.2",
         "sensio/distribution-bundle": "^5.0.19",
