Controllers; Controller actions; Swagger UI annotations

--- a/src/MessengerBundle/Resources/config/routing.yml
+++ b/src/MessengerBundle/Resources/config/routing.yml
@@ -1,3 +1,11 @@
 users:
     type:     rest
     resource: 'MessengerBundle\Controller\UsersController'
+
+messages:
+    type:     rest
+    resource: 'MessengerBundle\Controller\MessagesController'
+
+dialogs:
+    type:     rest
+    resource: 'MessengerBundle\Controller\DialogsController'
