Test database; data fixtures

--- a/src/MessengerBundle/Resources/config/services.yml
+++ b/src/MessengerBundle/Resources/config/services.yml
@@ -2,3 +2,6 @@ services:
 #    messenger.example:
 #        class: MessengerBundle\Example
 #        arguments: ["@service_id", "plain_value", "%parameter%"]
+  messenger.fixrures.user:
+      class: MessengerBundle\DataFixtures\UserFixtures
+      tags: [doctrine.fixture.orm]
