--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,9 @@
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
+        "codeception/codeception": "^2.4",
         "doctrine/doctrine-fixtures-bundle": "^3.0",
+        "flow/jsonpath": "^0.4.0",
         "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^3.0"
     },
