--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,11 @@ services:
       environment:
         - MYSQL_USER=root
         - MYSQL_ROOT_PASSWORD=root
+        - MYSQL_ROOT_HOST=%
       volumes:
         - /var/lib/mysql
+      ports:
+        - "3306:3306"
   api:
       build: '.'
       image: 'demo-messenger-api'
@@ -29,3 +32,5 @@ services:
       volumes:
         - .:/var/www/application
         - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      depends_on:
+        - api
