Enabled nginx logs

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,8 @@ server {
 
     root /var/www/application/web;
 
-    access_log    off;
+    access_log    /var/log/nginx/api-access.log;
+    error_log    /var/log/nginx/api-error.log;
     log_not_found off;
 
     location / {
