--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,15 @@ steps:
     dockerRegistryEndpoint: 'teddyclub shop registry'
 
     command: login
-
+	
+- script: |
+	npm install
+	npm test
+    docker build -f Dockerfile -t $(dockerId)/$(imageName) .
+    docker login -u $(dockerId) -p $pswd
+	docker push $(dockerId)/$(imageName)
+  env:
+	  pswd: $(dockerPassword)
 
 - task: Docker@1
   displayName: 'Build an image'
@@ -24,7 +32,6 @@ steps:
     containerregistrytype: 'Container Registry'
 
     dockerRegistryEndpoint: 'teddyclub shop registry'
-
 
 - bash: |
    # Write your commands here
@@ -50,6 +57,7 @@ steps:
 
 - task: Docker@1
   displayName: 'Push an image'
+  enabled: false
   inputs:
     containerregistrytype: 'Container Registry'
 
