--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,12 +38,12 @@ steps:
     env:
         pswd: $(dockerPassword)
 
-  - task: Docker@1
-    displayName: 'Push an image'
-    enabled: true
-    inputs:
-      containerregistrytype: 'Container Registry'
-      dockerRegistryEndpoint: 'teddyclub shop registry'
-#      command: 'Push an image'
-      command: 'push'
-          imageName: 'contoso.azurecr.io/$repositoryname:$(Build.BuildId)'
+#  - task: Docker@1
+#    displayName: 'Push an image'
+#    enabled: true
+#    inputs:
+#      containerregistrytype: 'Container Registry'
+#      dockerRegistryEndpoint: 'teddyclub shop registry'
+##      command: 'Push an image'
+#      command: 'push'
+#          imageName: 'contoso.azurecr.io/$repositoryname:$(Build.BuildId)'
