--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,12 +18,12 @@ steps:
 #      php -version
 #      displayName: 'Set PHP'
 #      enabled: false
-  - task: Docker@1
-    displayName: 'Docker login'
-    inputs:
-      containerregistrytype: 'Container Registry'
-      dockerRegistryEndpoint: 'teddyclub shop registry'
-      command: login
+#  - task: Docker@1
+#    displayName: 'Docker login'
+#    inputs:
+#      containerregistrytype: 'Container Registry'
+#      dockerRegistryEndpoint: 'teddyclub shop registry'
+#      command: login
 
   - script: |
         docker build -f Dockerfile -t $(dockerId)/$(imageName) .
