--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@ resources:
 - repo: self
 queue:
   name: Hosted Ubuntu 1604
-variables:
+#variables:
 #  BuildConfiguration: 'Release'
 steps:
 #  - bash: |
