Actualization; fixes; updated build system; removed excess code; update readme
commit 39e78901e7fd5cebe6f046a7a15e02bbdc6f0545
Author: zorkyy <prokopenko.dmytro@pdffiller.team>
Date:   Sun Feb 23 20:23:58 2020 +0200

    Actualization; fixes; updated build system; removed excess code; update readme

    commit af2d289f6bd20c1a76b2f650106afe9d5c8c7433
    Author: zorkyy <prokopenko.dmytro@pdffiller.team>
    Date:   Sun Feb 23 20:22:50 2020 +0200

        Actualization; fixes; updated build system; removed excess code; update readme

    commit 22c08a75f703537a8a05649269f1dc1a42a36918
    Author: zorkyy <prokopenko.dmytro@pdffiller.team>
    Date:   Fri Sep 27 15:59:20 2019 +0300

        Moved files back

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,13 @@
-**/node_modules
-application/vendor
+.dockerignore
+.editorconfig
+.git
+.gitattributes
+.gitignore
+.idea
+terraform.tfstate
+Dockerfile
+README.md
+tests/
 application/var/sessions/!.gitkeep
 application/var/logs/!.gitkeep
 application/var/cache/!.gitkeep
-
