--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80 default_server;
 
-    root /var/www/application/web;
+    root /var/www/html/web;
 
     access_log    /var/log/nginx/api-access.log;
     error_log    /var/log/nginx/api-error.log;
@@ -12,7 +12,7 @@ server {
     }
 
     location ~ ^/app\.php(/|$) {
-        fastcgi_pass messenger_api_pod:9000;
+        fastcgi_pass app_php:9000;
         fastcgi_send_timeout 15s;
         fastcgi_read_timeout 15s;
         fastcgi_connect_timeout 3s;
