--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,39 @@
 version: '3.3'
 services:
-  db:
+  app:
+      build: '.'
+      image: 'app'
+      container_name: 'app_php'
+      volumes:
+        - .:/var/www/html
+      environment:
+        - SYMFONY_ENV=dev
+      expose:
+        - "9000/tcp"
+      depends_on:
+        - mysql
+  nginx:
+      image: 'nginx'
+      container_name: 'app_nginx'
+      ports:
+        - "8080:80"
+      environment:
+        - SYMFONY_ENV=dev
+      volumes:
+        - .:/var/www/html
+        - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf
+      depends_on:
+        - app
+  mysql:
       image: 'mysql:5.6.26'
-      container_name: 'mysql_pod'
+      container_name: 'app_mysql'
+      ports:
+        - 127.0.0.1:3307:3306
       environment:
         - MYSQL_USER=root
         - MYSQL_ROOT_PASSWORD=root
         - MYSQL_ROOT_HOST=%
       volumes:
         - mysql-data:/var/lib/mysql
-      expose:
-        - "3306/tcp"
-  api:
-      build: '.'
-      image: 'demo-messenger-api'
-      container_name: 'messenger_api_pod'
-      environment:
-        - SYMFONY_ENV=dev
-      volumes:
-        - ./application:/var/www/application
-      depends_on:
-        - db
-      expose:
-        - "9000/tcp"
-  nginx:
-      image: 'nginx'
-      container_name: 'nginx_pod'
-      ports:
-        - "3000:80"
-      environment:
-        - SYMFONY_ENV=dev
-      volumes:
-        # static
-        - ./application/web:/var/www/application/web
-        - ./application/src:/var/www/application/src
-        - ./application/vendor:/var/www/application/vendor
-        # end static
-        - ./nginx.conf:/etc/nginx/conf.d/default.conf
-        - ./data/nginx/logs:/var/log/nginx
-      depends_on:
-        - api
 volumes:
   mysql-data:
